# BeeSynth

./: .gitignore  BEESYNTH.md  BEEWAVE.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
beeper/: Cargo.toml
beeper/src/: generic.rs  iopl_based.rs  lib.rs  port_accessor.rs  sound_emitter.rs
inpout/: Cargo.toml
inpout/src/: error.rs  inpout_impl.rs  interface.rs  lib.rs  loader.rs  slicer.rs
iopl/: Cargo.toml
iopl/src/: level.rs  lib.rs
iopl/src/windows/: consts.rs  error.rs  iopl_patcher.rs  ktrap_frame.rs  mod.rs  patcher_impl.rs  phys_mapper.rs  phys_ranges.rs  types.rs
nano_sleep/: Cargo.toml
nano_sleep/src/: lib.rs
note/: Cargo.toml
note/src/: lib.rs
src/: audio_classifier.rs  converter.rs  help.rs  main.rs
src/synth/: channel.rs  mod.rs  note_record.rs  parser.rs
src/wave/: bakery.rs  filter.rs  freq_extractor.rs  freq_filters.rs  freq_modulation.rs  mod.rs  note_matcher.rs  player.rs  wav_extractor.rs  wav_header.rs
src/xm/: xm_header.rs  xm_player.rs
winapi/: Cargo.toml
winapi/src/: arch.rs  auto.rs  ioctl.rs  lib.rs  sched.rs  scm.rs  sync.rs
