[package]
name = "iopl"
version = "0.1.0"
edition = "2021"
authors = [ "Alexander Eremeev @ HoShiMin <aleksanderem@yandex.ru>" ]

[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Registry"
]

[target.'cfg(windows)'.dependencies]
winapi = { path = "../winapi" }
inpout = { path = "../inpout" }