[package]
name = "winapi"
version = "0.1.0"
edition = "2021"
authors = [ "Alexander Eremeev @ HoShiMin <aleksanderem@yandex.ru>" ]

[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Security"
]

[dependencies]
proc-bitfield = "0.2"